--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
       width: 150px;
       height: 150px;
       margin: 5px;
+      cursor: pointer;
     }
+
+
+    
+    
+
+  .tweet-button:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+  }
+
+
   </style>
 </head>
 <body>
