first business card

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <div class="container">
     <img src="./img/mifoto.jpg" alt="Mi Foto" class="round-image">
     <div class="content">
-      <h1>Marc Urruela</h1>
+      <h1>El Chiguire Espacial</h1>
       <h2>Desarrollo Web Fullstack, Base de Datos</h2>
       <hr>
       <h2>Acerca de Mí</h2>
