--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
       text-align: center;
       word-wrap: break-word;
     }
+    h3 { text-align: center; 
+    }
 
     hr {
       border: none;
@@ -95,7 +97,7 @@
       <h1>El Chiguire Espacial</h1>
       <h2>Desarrollo Web Fullstack, Base de Datos</h2>
       <hr>
-      <h2>Acerca de Mí</h2>
+      <h3>Acerca de Mí</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem enim beatae ad asperiores omnis, veniam magni, illum quis excepturi voluptatem molestias aperiam aliquam sit sunt aliquid quidem eum, ab blanditiis.
       </p>
