--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tarjeta de Presentación</title>
+  <title>Tarjeta de Presentación v0.1</title>
   <meta name="description" content="Tarjeta de presentación de Marc Urruela, Desarrollo Web Fullstack y Base de Datos.">
   <style>
     body {
